# enhanced-chess-bot

./: .gitignore  CMakeLists.txt  vcpkg.json
include/core/: Board.h  Types.h
include/engine/: Engine.h  ZobristHash.h
include/game/: GameManager.h  Player.h
include/ui/: Gui.h
src/: main.cpp
src/core/: Board.cpp  Types.cpp
src/engine/: Engine.cpp
src/game/: GameManager.cpp  Player.cpp
src/ui/: Gui.cpp
